tests/machine/x/ocaml/outer_join.error
File "/workspace/mochi/tests/machine/x/ocaml/outer_join.ml", line 34, characters 42-43:
34 |         __res0 := { order = o; customer = c } :: !__res0;
                                               ^
Error: This expression has type record2
       but an expression was expected of type record1
